# exodus-agent

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  README.md  pyproject.toml
docs/: architecture.md  quickstart-webex-to-teams.md  teams-mapping.md
docs/adr/: 0001-tool-format.md  0002-runtime-model.md
docs/research/: webex-telegram.md
examples/: webex-to-teams.example.toml  webex-to-telegram.example.toml  webex-to-telegram.organization.example.toml
exodus_agent/: __init__.py  archive.py  capabilities.py  cli.py  config.py  connectors.py  job.py  model.py  mtproto_runner.py  planner.py  protocols.py  redaction.py  runner.py  secrets.py  workflow.py
exodus_agent/sources/: webex.py
exodus_agent/targets/: __init__.py  graph_teams_adapter.py  teams_executor.py  teams_mapping.py  teams_shared.py  telegram.py  telegram_executor.py
scripts/: bundle.sh
tests/: test_archive.py  test_cli.py  test_config_and_planner.py  test_graph_teams_adapter.py  test_job.py  test_model.py  test_mtproto_runner.py  test_project_metadata.py  test_redaction.py  test_runner.py  test_secrets.py  test_teams_executor.py  test_teams_mapping.py  test_telegram_executor.py  test_telegram_target.py  test_webex_source.py  test_workflow.py
